# E-Learning

./: LICENSE.md  README.md
app/: pubspec.yaml
app/lib/: main.dart
app/lib/pages/: layout.dart
app/test/: widget_test.dart
client/: README.md  flutter_native_splash-development.yaml  flutter_native_splash-production.yaml  flutter_native_splash-staging.yaml  pubspec.yaml
client/android/app/: build.gradle  google-services.json
client/assets/mocks/: questions.json
client/assets/videos/: learn.json  man_lecturing_woman.json  your_mind.json
client/ios/: firebase_app_id_file.json
client/ios/Runner/: GoogleService-Info.plist  Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/ios/Runner/Base.lproj/: LaunchScreenDevelopment.storyboard  LaunchScreenProduction.storyboard  LaunchScreenStaging.storyboard
client/lib/: firebase_options.dart  main.dart
client/lib/components/: quiz_modal.dart
client/lib/mocks/: dummy.json
client/lib/pages/: about_page.dart  ai_quiz.dart  analytics_page.dart  dashboard.dart  home_page.dart  landing_page.dart  login_page.dart  profile_page.dart  quiz_page.dart  recommendation_page.dart  splash_page.dart
client/lib/services/: auth.service.dart
client/lib/src/constants/: color.dart  image_strings.dart  sizes.dart  (+1 more)
client/lib/themes/: app_theme.dart  text_theme.dart
client/lib/utils/: classes.dart  constants.dart  enums.dart  helpers.dart
client/web/: index.html
dep/: pubspec.yaml
server/: package.json  pyproject.toml
server/server/: main.py
server/server/utils/: analyze_data.py
server/src/: index.ts
(+7 files in other folders)
