[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Simon Samuel <salviensky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11,<3.13"
flask = "^3.0.0"
pytest = "^7.4.2"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingImports = false