[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Simon Samuel <salviensky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.7.1"
flask = "^3.0.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
