[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Simon Samuel <salviensky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.7.1"
flask = "^3.0.0"
pytest = "^7.4.3"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
pandas-stubs = "^2.1.1.230928"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
